# temp-repo-openmp

./: CMakeLists.txt  README.md  add.cu  hello.cu
src/: barrier.cpp  count.cpp  count_private.cpp  critical.cpp  dynamic.cpp  gpu.cpp  hello.cpp  main.c  master.cpp  print.cpp  sections.cpp  shared.cpp  static.cpp  thread_private.cpp  version03.c
